terraform/main.tf
resource "aws_security_group" "allow_ssh_http" {
  name_prefix = "allow-ssh-http-"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web" {
  ami           = "ami-0f5ee92e2d63afc18"
  instance_type = var.instance_type
  key_name      = var.key_name
  security_groups = [aws_security_group.allow_ssh_http.name]

  user_data = <<-EOF
              #!/bin/bash
              set -e

              apt update -y
              apt install -y openjdk-11-jdk wget unzip curl

              cd /opt
              wget https://archive.apache.org/dist/tomcat/tomcat-10/v10.1.18/bin/apache-tomcat-10.1.18.tar.gz
              tar -xvzf apache-tomcat-10.1.18.tar.gz
              mv apache-tomcat-10.1.18 tomcat
              chmod +x /opt/tomcat/bin/*.sh

              # Add deployment script
              cat << 'EOS' > /opt/deploy.sh
              #!/bin/bash
              set -e

              rm -rf /opt/tomcat/webapps/ROOT /opt/tomcat/webapps/ROOT.zip /opt/tomcat/webapps/temp_root
              wget https://github.com/anil2743/clarify/releases/download/v1.0/ROOT.zip -O /opt/tomcat/webapps/ROOT.zip
              mkdir /opt/tomcat/webapps/temp_root
              unzip /opt/tomcat/webapps/ROOT.zip -d /opt/tomcat/webapps/temp_root
              mkdir /opt/tomcat/webapps/ROOT
              cd /opt/tomcat/webapps/ROOT
              jar -xvf /opt/tomcat/webapps/temp_root/ROOT.war
              /opt/tomcat/bin/shutdown.sh || true
              sleep 3
              /opt/tomcat/bin/startup.sh
              echo "Deployed via CI/CD" >> /opt/deploy.log
              EOS

              chmod +x /opt/deploy.sh
              bash /opt/deploy.sh
              EOF

  tags = {
    Name = "JavaWebApp"
  }

  lifecycle {
    ignore_changes = [user_data]
  }
}

resource "aws_eip_association" "eip_assoc" {
  instance_id   = aws_instance.web.id
  allocation_id = "eipalloc-06cff5573d269a0c4"
}
